--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 #section10 a span {
   position: fixed;
   bottom: 5%;
-  right: 5%;
+  right: 50px;
   width: 30px;
   height: 50px;
   margin-left: -15px;
